PRJ-0: implemented user input checking, delete button, and fixed CSS for list item elements justified alignment

--- a/project0/styles.css
+++ b/project0/styles.css
@@ -57,6 +57,10 @@ ul {
 }
 
 .todo-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   padding: 20px;
   border-bottom: 1px solid #333;
 }
